# multi-agent-orchestration

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: claude.md  codex.md  gemini.md  orchestrator.md
agent/templates/: explorer.md  implementer.md  planner.md  reviewer.md
alembic/: env.py
alembic/versions/: 0001_initial.py  001_initial_schema.py  1bef516cb306_add_uuid_defaults.py  1c0640e3ceda_add_verifications.py  2f3a1c0c7e8a_add_round_agent_session_ids.py  3a9b1f0e2c91_improvements_rounds_costs.py  4b2c3d4e5f6a_add_model_config.py  5c6d7e8f9a0b_add_role_config.py  6d7e8f9a0b1c_add_round_agent_statuses.py  7a8b9c0d1e2f_add_round_agent_session_ids.py  8b9c0d1e2f3a_drop_round_legacy_agent_columns.py
debate/: __init__.py  cli.py  config.py  consensus.py  costs.py  db.py  errors.py  events.py  invoke_parallel.py  langgraph_app.py  model_config.py  models.py  opencode_client.py  orchestrate.py  queue.py  rate_limit.py  reconciliation.py  redis_client.py  role_config.py  run_agent.py  triage.py  verify.py
debate/lua/: rate_limit.lua
debate/tools/: __init__.py  agent_tool.py
debate/workers/: __init__.py  base.py  claude_worker.py  codex_worker.py  gemini_worker.py
debate/workflow/: __init__.py  base.py  debate_steps.py  debate_workflow.py
docs/: architecture.md  cli_reference.md  configuration.md  setup.md
docs/code-refactor/: consolidated_refactor_plan.md  cost_tracking.md  improvement_suggestions_claude.md  improvement_suggestions_codex.md  improvement_suggestions_gemini.md  langgraph_rewrite_todo.md  opencode_integration.md
examples/: README.md  basic_task.py  consensus_analysis.py
scripts/: setup.sh
tests/: __init__.py  conftest.py  test_consensus.py  test_costs.py  test_triage.py
