[project]
name = "multi-agent-orchestration"
version = "0.1.0"
description = "Multi-agent debate workflow for AI-assisted code analysis with opencode"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Dinesh Kumar Nalluri", email = "dineshkumarnalluri@outlook.com"}
]
maintainers = [
    {name = "Dinesh Kumar Nalluri", email = "dineshkumarnalluri@outlook.com"}
]
keywords = [
    "ai",
    "multi-agent",
    "code-analysis",
    "llm",
    "debate",
    "consensus",
    "claude",
    "gemini",
    "opencode",
    "workflow",
    "orchestration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg==0.31.0",
    "psycopg2-binary>=2.9.0",
    "alembic==1.17.2",
    "click==8.3.1",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "redis==7.1.0",
    "rich==14.2.0",
    "anyio==4.12.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
]

[project.urls]
Homepage = "https://github.com/Dinesh7N/multi-agent-orchestration"
Documentation = "https://github.com/Dinesh7N/multi-agent-orchestration/tree/main/docs"
Repository = "https://github.com/Dinesh7N/multi-agent-orchestration"
Issues = "https://github.com/Dinesh7N/multi-agent-orchestration/issues"
Changelog = "https://github.com/Dinesh7N/multi-agent-orchestration/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "pre-commit>=3.6.0",
    "detect-secrets>=1.4.0",
]

[project.scripts]
debate = "debate.cli:main"
orchestrate = "debate.orchestrate:main"
run-agent = "debate.run_agent:main"
gemini-worker = "debate.workers.gemini_worker:main"
claude-worker = "debate.workers.claude_worker:main"
codex-worker = "debate.workers.codex_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debate"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ty.environment]
python = ".venv"
